fix scrollbar background

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,10 @@
     background-color: var(--bg);
 }
 
+div::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 ::-webkit-scrollbar-thumb {
     background-color: var(--shadow);
     border-radius: 7px;
